# seabrowser

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.windows  LICENSE  README.md  SECURITY.md  build.bat  build.sh  clean_build.sh  test_onboarding.cpp  test_settings.cpp  test_simple.cpp
.github/workflows/: build-windows.yml
build-output/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
data/: io.seabrowser.SeaBrowser.desktop  io.tsunami.Tsunami.desktop  style.css
data/pages/: about.html  bookmarks.html  downloads.html  extensions.html  history.html  newtab.html  settings.html  setup.html
scripts/: build-all.sh  build-appimage.sh  build-deb.sh  build-flatpak.sh  build-rpm.sh  build-windows.ps1  build.sh  convert-icon.sh
scripts/flatpak/: io.tsunami.Tsunami.appdata.xml  io.tsunami.Tsunami.json
src/: address_bar.cpp  address_bar.h  application.cpp  application.h  bookmark_manager.cpp  bookmark_manager.h  browser_window.cpp  browser_window.h  download_manager.cpp  download_manager.h  extension_manager.cpp  extension_manager.h  main.cpp  tab_manager.cpp  tab_manager.h  tab_view.cpp  tab_view.h  update_manager.cpp  update_manager.h  utils.h  version.h  web_view.cpp  web_view.h
src/bookmarks/: bookmarks_manager.cpp  bookmarks_manager.h
src/downloads/: downloads_manager.cpp  downloads_manager.h
src/extensions/: extension_manager.h
src/history/: history_manager.cpp  history_manager.h
src/platform/: window_manager.cpp  window_manager.h
src/privacy/: content_blocker.cpp  content_blocker.h  cookie_manager.cpp  cookie_manager.h
src/resources/windows/: tsunami.rc
src/settings/: settings.cpp  settings.h  settings_dialog.cpp  settings_dialog.h  settings_manager.cpp  settings_manager.h  settings_window.cpp  settings_window.h
src/ui/: bookmarks_window.cpp  bookmarks_window.h  custom_menu.cpp  custom_menu.h  downloads_window.cpp  downloads_window.h  extensions_window.cpp  extensions_window.h  history_window.cpp  history_window.h  onboarding_dialog.cpp  onboarding_dialog.h
src/utils/: config.cpp  config.h
